fix: adjust footer navigation positioning for better responsiveness on small screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -183,8 +183,8 @@ footer nav a:hover {
     top: 3.5rem;
 
     @media (max-width: 425px) {
-        left: 50%;
-        transform: translate(-50%, 0);
+        left: 0;
+        transform: translate(-51%, 0);
         width: 100vw;
     }
 
